Se agregaron los nombres

--- a/MentalHealth.ipynb
+++ b/MentalHealth.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "94051010-a691-4180-a444-986c2307b095",
+   "metadata": {},
+   "source": [
+    "# PROYECTO FINAL REDES NEURONALES : **DETECCIÓN DE ENFERMEDADES MENTALES EN EL ÁREA DE TECNOLOGIA**\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6af50b0a-ce33-4434-86bd-6ff9ffa36194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Integranetes:\n",
+    "    - Rodriguez Belmonte Lázaro Eduardo\n",
+    "    -  Victor Federico "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ccc41688-b316-4581-88b0-29a26a2ddc58",
    "metadata": {},
    "source": [
