--- a/MentalHealth.ipynb
+++ b/MentalHealth.ipynb
@@ -16,9 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Integranetes:\n",
+    "## Integrantes:\n",
     "    - Rodriguez Belmonte Lázaro Eduardo\n",
-    "    -  Victor Federico "
+    "    - Victor Federico Torres Trejo"
    ]
   },
   {
@@ -4034,7 +4034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
